Gpencil. Grease Pencil Vertex Size in theme settings is ignored #79800

Closed
opened 2020-08-15 09:48:29 +02:00 by Tomasz Kaye · 10 comments

System Information
Operating system: Darwin-19.3.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.5.5

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-09 00:04, hash: b522e834ec

Short description of error
Grease Pencil Vertex Size in theme settings is ignored. GPencil vertexes instead display according to the 'Vertex size' setting.

image.png

**System Information** Operating system: Darwin-19.3.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.5.5 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-09 00:04, hash: `b522e834ec` **Short description of error** Grease Pencil Vertex Size in theme settings is ignored. GPencil vertexes instead display according to the 'Vertex size' setting. ![image.png](https://archive.blender.org/developer/F8782875/image.png)
Author

Added subscriber: @info-27

Added subscriber: @info-27

Added subscribers: @fclem, @antoniov

Added subscribers: @fclem, @antoniov

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

I cannot reproduce it on Windows.

2020-08-15 11-09-01.mp4

@fclem can you reproduce it on Linux?

I cannot reproduce it on Windows. [2020-08-15 11-09-01.mp4](https://archive.blender.org/developer/F8783071/2020-08-15_11-09-01.mp4) @fclem can you reproduce it on Linux?

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

@lichtwerk Can you reproduce, or it's a new MacOs issue only?

@lichtwerk Can you reproduce, or it's a new MacOs issue only?

@antoniov you are tweaking the Vertex Size not the Grease Pencil Vertex Size.

TBH I don't know if we should keep both settings.

If you want to keep it, add it to the globalsBlock. Don't forget alignment / padding of the struct.

@antoniov you are tweaking the Vertex Size not the Grease Pencil Vertex Size. TBH I don't know if we should keep both settings. If you want to keep it, add it to the `globalsBlock`. Don't forget alignment / padding of the struct.

This issue was referenced by 017941057f

This issue was referenced by 017941057f8a36925de4d3d7ce6fd16338846bf1

@fclem Yes, it's better keep both values...maybe something that looks small in Gpencil, it looks huge in a mesh edit.

I'm going to loo into GlobalsUboStorage definition.

Proposed fix: D8607

@fclem Yes, it's better keep both values...maybe something that looks small in Gpencil, it looks huge in a mesh edit. I'm going to loo into `GlobalsUboStorage` definition. Proposed fix: [D8607](https://archive.blender.org/developer/D8607)
Antonio Vazquez self-assigned this 2020-08-18 15:14:13 +02:00

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79800
No description provided.