Fix T79800: Split vertex size for grease pencil

Differential Revision: https://developer.blender.org/D8607